initial client and server impl using seneca

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "application-model-lang",
   "version": "1.0.0",
   "description": "Application Model language",
-  "main": "index.js",
+  "main": "dist/index.js",
   "directories": {
     "doc": "docs"
   },
@@ -27,13 +27,19 @@
   },
   "homepage": "https://github.com/kristianmandrup/application-model-lang#readme",
   "dependencies": {
+    "@types/fs-extra": "^5.0.4",
     "@types/jest": "^23.3.10",
     "@types/node": "^10.12.12",
     "chevrotain": "^4.1.0",
+    "fs-extra": "^7.0.1",
     "jest": "^23.6.0",
     "lodash": "^4.17.11",
     "powerdash": "^1.1.0",
     "tslint": "^5.11.0",
     "underscore.string": "^3.3.5"
+  },
+  "devDependencies": {
+    "seneca": "^3.7.0",
+    "seneca-promise": "^1.1.2"
   }
 }
